--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <script src="./script/script.js" async></script>
 </head>
 <body>
+
+    <section class="digital-clock-body around">
+        <div class=" houres center">1</div>
+        <div class=" minuies center">2</div>
+        <div class=" secconds center">3</div>
+    </section>
     
 </body>
 </html>
