--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>
 
     <section class="digital-clock-body around">
-        <div class=" houres center">1</div>
-        <div class=" minuies center">2</div>
-        <div class=" secconds center">3</div>
+        <div class=" houres center">h</div>
+        <div class=" minuies center">m</div>
+        <div class=" secconds center">s</div>
+        <div class=" ampm center">ampm</div>
     </section>
     
 </body>
